# Fantasy-Football-Analysis

./: .env.example  .gitattributes  .gitignore  .gitmessage.txt  NFLREADPY_MIGRATION_PLAN.md  README.md  app.py  dev-startup.ps1  main.py  nflreadpy_analysis.py  pyproject.toml  pytest.ini  quality-gate.ps1  refresh_data.py  requirements.txt  run_api.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: README.md  __init__.py  api.py  app.py  base_source.py  models.py  refresh_data.py  run_api.py
backend/api/: README.md  api.py  models.py
backend/api/routes/: depth_chart_routes.py  schedule_routes.py  statistics_routes.py  teams_routes.py
backend/api/util/: cache_helpers.py  (+3 more)
backend/config/: logging_config.py  settings.py
backend/database/: README.md
backend/depth_chart/: __init__.py  espn.py  ndp.py  nrp.py
backend/schedules/: __init__.py  schedules.py
backend/statistics/: README.md  column_maps.py  loaders.py  statistics.py  stats_config.py
backend/tests/: conftest.py
backend/util/: api_helpers.py  constants.py  dynasty_ratings.py  exceptions.py  position_multipliers.py  timing.py
config/: logging_config.py
docs/: README.md  api.md  backend-api.md  backend-depth-charts.md  backend-statistics.md  espn.md  excel.md  frontend-overview.md  import_seasonal_data.md  ndp.md  regression.md  schedules.md  statistics.md
frontend/: .gitignore  README.md  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  appContent.js  index.css  main.jsx  statDefinitions.js
frontend/tests/: deferred.js  setup.js
scripts/: autofix.ps1  clean.ps1  dev-startup.ps1  quality-gate.ps1
source/: __init__.py  api.py  base_source.py  models.py  web_interface.py
source/data/: defense_tiers.json
source/database/: __init__.py  excel.py  sqlite.py
source/depth_chart/: espn.py  ndp.py
source/output/: __init__.py  excel.py
source/schedules/: schedules.py
source/statistics/: __init__.py  statistics.py
source/templates/: base.html  depth_chart.html  index.html  player_stats.html  schedules.html  statistics.html  table.html
source/util/: team_colors.py  teams.py
tests/: conftest.py  espn_test.py  excel_test.py  ndp_test.py  regression_test.py  schedules_test.py  statistics_test.py
tests/e2e/: test_user_flows_e2e.py
tests/integration/: test_api_routes_integration.py  test_sqlite_service_integration.py
tests/unit/: test_api_statistics_helpers_unit.py  test_stats_helpers_unit.py  test_team_helpers_unit.py
(+415 files in other folders)
