[project]
name = "fantasy-football-analysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "nflreadpy>=0.1.5",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.1",
    "types-requests>=2.32.4.20260107",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".pytest_cache",
    ".venv",
    "frontend",
    "logs",
]

[tool.ruff.lint]
select = ["F", "I"]

[tool.mypy]
python_version = "3.10"
files = ["backend"]
exclude = ["^backend/tests/"]
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
pretty = true
show_error_codes = true
