[project]
name = "fantasy-football-analysis"
version = "0.1.0"
description = "Fantasy football analysis application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "nflreadpy>=0.1.5",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["F", "I"]

[tool.mypy]
python_version = "3.10"
files = ["backend"]
exclude = ["^backend/tests/"]
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
pretty = true
show_error_codes = true
